[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replaybt"
dynamic = ["version"]
description = "Realistic backtesting engine for algo traders & AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "sirmoremoney"},
]
keywords = ["backtesting", "trading", "algorithmic-trading", "crypto"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/sirmoremoney/replaybt"
Source = "https://github.com/sirmoremoney/replaybt"
Issues = "https://github.com/sirmoremoney/replaybt/issues"

[project.optional-dependencies]
data = ["requests>=2.28"]
live = ["aiohttp>=3.8", "websockets>=11.0"]
cli = ["click>=8.0", "rich>=13.0"]
plots = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "matplotlib>=3.5", "requests>=2.28"]

[tool.hatch.version]
path = "src/replaybt/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/replaybt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
